z-index fix on why us section

--- a/css/experience.css
+++ b/css/experience.css
@@ -196,7 +196,7 @@ header{
     background-color: rgb(255, 248, 229);
     padding: 7rem 2rem 2rem 2rem;
     position: relative;
-    z-index: -1;
+    z-index: 0;
 }
 .red-curve{
     position: absolute;
@@ -213,17 +213,17 @@ header{
 }
 .talent-cards{
     display: flex;
-    position: relative;
     flex-direction: column;
     gap: 1rem;
     flex-wrap: wrap;
     max-width: 1200px;
     margin: 4rem auto;
-    z-index: 1;
 }
 .talent-card{
+    position: relative;
     background-color: var(--color-white);
     padding: 4rem 1.5rem;
+    z-index: 1;
 }
 .talent-card:hover{
     background-color: #000;
